syntax = "proto3";
package sheep;

option go_package = "./;proto";

message GetBoolFlagRequest {
  string key = 1;
  string consistency_key = 2;
}

message GetBoolFlagResponse {
    string key = 1;
    bool value = 2;
}

message CreateFlagRequest {
  string key = 1;
}

message CreateFlagResponse {
  string key = 1;
}

service Sheep {
    rpc GetBoolFlag(GetBoolFlagRequest) returns (GetBoolFlagResponse);
    rpc CreateFlag(CreateFlagRequest) returns (CreateFlagResponse);
}
